--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -15,7 +15,7 @@
     <p>私が学生時代にV系ロックバンドに出会い衝撃を受けました。</p>
     <br>それ以来休日はギターの練習をしたり、仲間と一緒に楽しい時を過ごしています。
     <h3>もちろん、おしゃれも大好き！</h3>
-    <img src="C:\Users\User\OneDrive\デスクトップ\kadai_005\images\image0.jpg">
+    <img src="kadai_005/images/image0.jpg">
     <img src="C:\Users\User\OneDrive\デスクトップ\kadai_005\images\image1.jpg">
     <p>
       <a href="https://twitter.com/samuraijuku">私のプロフィールはこちら</a>
