--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -11,7 +11,10 @@
 
   <body>
 
-    <h1>私の趣味</h1>
+    <header>
+      <h1>私の趣味</h1>
+    </header>
+    
     <p>私が学生時代にV系ロックバンドに出会い衝撃を受けました。</p>
     <br>それ以来休日はギターの練習をしたり、仲間と一緒に楽しい時を過ごしています。
     <h3>もちろん、おしゃれも大好き！</h3>
