--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -16,7 +16,10 @@
     </header>
     
     <p>私が学生時代にV系ロックバンドに出会い衝撃を受けました。</p>
-    <p>それ以来休日はギターの練習をしたり、仲間と一緒に楽しい時を過ごしています。</p>
+    <p>それ以来休日はギターの練習をしたり、
+      <br>
+      仲間と一緒に楽しい時を過ごしています。</p>
+    
     <h3>もちろん、おしゃれも大好き！</h3>
     <img src="../images/image0.jpg">
     <img src="../images/image1.jpg">
